# leakferret

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  NOTICE  README.md  SECURITY.md  clippy.toml  deny.toml  rust-toolchain.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  live-verifiers.yml  release.yml  test.yml
crates/leakferret-cli/: Cargo.toml
crates/leakferret-cli/src/: main.rs
crates/leakferret-cli/src/commands/: baseline.rs  catalog.rs  mcp.rs  mod.rs  org.rs  progress.rs  rewrite.rs  scan.rs  verify.rs
crates/leakferret-core/: Cargo.toml  README.md
crates/leakferret-core/catalog/: snapshot.json
crates/leakferret-core/src/: config.rs  engine.rs  error.rs  lib.rs
crates/leakferret-core/src/baseline/: history.rs  mod.rs  store.rs
crates/leakferret-core/src/catalog/: load.rs  lookup.rs  mod.rs  signature.rs
crates/leakferret-core/src/classifier/: mod.rs  offline.rs  prompt.rs
crates/leakferret-core/src/finding/: fingerprint.rs  mod.rs  severity.rs  verdict.rs
crates/leakferret-core/src/patterns/: mod.rs  registry.rs
crates/leakferret-core/src/reporter/: json.rs  mod.rs  pretty.rs  sarif.rs
crates/leakferret-core/src/rewriter/: language.rs  mod.rs  proposal.rs
crates/leakferret-core/src/scanner/: allowlist.rs  context.rs  git_history.rs  mod.rs  walker.rs
crates/leakferret-core/src/verifier/: anthropic.rs  aws.rs  databricks.rs  datadog.rs  digitalocean.rs  figma.rs  github.rs  gitlab.rs  groq.rs  heroku.rs  huggingface.rs  linear.rs  mailgun.rs  mod.rs  notion.rs  npm_token.rs  openai.rs  postman.rs  pypi_token.rs  replicate.rs  sendgrid.rs  shopify.rs  slack.rs  square.rs  stripe.rs  trufflehog.rs  twilio.rs
crates/leakferret-core/tests/: catalog_bundled.rs  live_verifiers.rs  no_repo_writes.rs  privacy.rs
crates/leakferret-mcp/: Cargo.toml
crates/leakferret-mcp/src/: lib.rs  methods.rs  protocol.rs  server.rs
docs/: ARCHITECTURE.md  proxy-api.md
legacy-ruby/: .rubocop.yml  Gemfile  secrets_dev.gemspec
legacy-ruby/lib/: secrets_dev.rb
legacy-ruby/lib/secrets_dev/: classifier.rb  cli.rb  finding.rb  gitignore.rb  mcp_server.rb  patterns.rb  reporter.rb  rewriter.rb  scanner.rb  version.rb
legacy-ruby/spec/: spec_helper.rb
legacy-ruby/spec/secrets_dev/: classifier_spec.rb  mcp_server_spec.rb  reporter_spec.rb  rewriter_spec.rb  scanner_spec.rb
