[workspace]
resolver = "2"
members = [
    "crates/leakferret-core",
    "crates/leakferret-cli",
    "crates/leakferret-mcp",
]

[workspace.package]
version       = "0.1.5"
edition       = "2021"
rust-version  = "1.88"
authors       = ["Maria Khan <missusk@protonmail.com>"]
license       = "MIT"
repository    = "https://github.com/leakferrethq/leakferret"
homepage      = "https://github.com/leakferrethq/leakferret"
documentation = "https://docs.rs/leakferret-core"
readme        = "README.md"
keywords      = ["security", "secrets", "scanner", "mcp", "agent"]
categories    = ["command-line-utilities", "development-tools"]

[workspace.dependencies]
# core
anyhow         = "1.0"
thiserror      = "1.0"
serde          = { version = "1.0", features = ["derive"] }
serde_json     = "1.0"
serde_with     = "3"
regex          = "1.10"
ignore         = "0.4"
walkdir        = "2.5"
once_cell      = "1.19"
parking_lot    = "0.12"
rayon          = "1.10"
indexmap       = { version = "2.2", features = ["serde"] }
bytes          = "1.6"
memchr         = "2.7"
tracing        = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# async + http
tokio          = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time", "fs", "io-util", "io-std", "process"] }
reqwest        = { version = "0.12", default-features = false, features = ["native-tls", "json", "gzip"] }
futures        = "0.3"
async-trait    = "0.1"

# crypto
sha2           = "0.10"
hmac           = "0.12"
ed25519-dalek  = { version = "2.1", features = ["pem"] }
hex            = "0.4"
base64         = "0.22"
rand           = "0.8"
uuid           = { version = "1", features = ["v4", "serde"] }

# cli
clap           = { version = "4.5", features = ["derive", "env", "wrap_help"] }
clap_complete  = "4.5"
console        = "0.15"
owo-colors     = "4"
indicatif      = "0.17"
dialoguer      = "0.11"

# time
time           = { version = "0.3", features = ["serde", "formatting", "parsing", "macros"] }
chrono         = { version = "0.4", default-features = false, features = ["serde", "clock"] }

# fs
tempfile       = "3.10"
dirs           = "5"
similar        = "2"

# testing
insta          = { version = "1.39", features = ["yaml", "json"] }
assert_cmd     = "2"
predicates     = "3"
pretty_assertions = "1.4"
mockito        = "1"
rstest         = "0.21"
proptest       = "1.4"

[profile.release]
opt-level     = 3
lto           = "thin"
codegen-units = 1
strip         = "symbols"
panic         = "abort"
incremental   = false

[profile.dev]
opt-level     = 0
debug         = true

[profile.bench]
opt-level     = 3
lto           = "thin"
codegen-units = 1
