[package]
name          = "leakferret-cli"
version       = { workspace = true }
edition       = { workspace = true }
rust-version  = { workspace = true }
authors       = { workspace = true }
license       = { workspace = true }
repository    = { workspace = true }
description   = "CLI for leakferret — context-aware secret detection with provider verification and ENV.fetch rewrites."

[[bin]]
name = "leakferret"
path = "src/main.rs"

[dependencies]
leakferret-core = { path = "../leakferret-core", version = "0.1.3" }
leakferret-mcp  = { path = "../leakferret-mcp",  version = "0.1.3" }

anyhow             = { workspace = true }
clap               = { workspace = true }
clap_complete      = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
tokio              = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
console            = { workspace = true }
owo-colors         = { workspace = true }
indicatif          = { workspace = true }
dirs               = { workspace = true }
chrono             = { workspace = true }
similar            = { workspace = true }
reqwest            = { workspace = true }
base64             = { workspace = true }
ed25519-dalek      = { workspace = true }
# Only pulled in by the `vendored-openssl` feature, which the release
# workflow enables for cross-compiled targets (e.g. aarch64-linux) so
# OpenSSL is built from source rather than linked from the (absent) system.
openssl            = { version = "0.10", optional = true }

[features]
vendored-openssl = ["dep:openssl", "openssl/vendored"]

[dev-dependencies]
assert_cmd  = { workspace = true }
predicates  = { workspace = true }
tempfile    = { workspace = true }
insta       = { workspace = true }
mockito     = { workspace = true }
rand        = { workspace = true }
